[gd_scene load_steps=13 format=2]

[ext_resource path="res://Prefabs/UI/Prefab_Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/DynFont_HeadersBackOutline2.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/DynFont_Headers.tres" type="DynamicFont" id=3]
[ext_resource path="res://Textures/UI/tex_panel_9slice_02.png" type="Texture" id=4]
[ext_resource path="res://Textures/UI/tex_panel_9slice_04.png" type="Texture" id=5]
[ext_resource path="res://Scripts/UI/SkewedUIElement.gd" type="Script" id=6]
[ext_resource path="res://Scripts/UI/HeaderBackOutline.gd" type="Script" id=7]
[ext_resource path="res://Fonts/DynFont_CharacterBio.tres" type="DynamicFont" id=8]
[ext_resource path="res://Scripts/UI/Menu_CharacterSelect.gd" type="Script" id=9]
[ext_resource path="res://Fonts/DynFont_CharacterBio2.tres" type="DynamicFont" id=10]
[ext_resource path="res://Fonts/DynFont_CharacterBio3.tres" type="DynamicFont" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.282353, 0.658824, 0.909804, 0.396078 )
corner_radius_top_left = 24
corner_radius_top_right = 12
corner_radius_bottom_right = 24
corner_radius_bottom_left = 12

[node name="Menu" instance=ExtResource( 1 )]
script = ExtResource( 9 )

[node name="Skew" type="Node2D" parent="." index="2"]
position = Vector2( 388, 222 )
script = ExtResource( 6 )

[node name="Panel" type="NinePatchRect" parent="Skew" index="0"]
self_modulate = Color( 0.682353, 0.984314, 1, 1 )
margin_left = -548.0
margin_top = -128.0
margin_right = 526.0
margin_bottom = 138.0
rect_pivot_offset = Vector2( 250, 135 )
texture = ExtResource( 4 )
patch_margin_left = 76
patch_margin_top = 63
patch_margin_right = 70
patch_margin_bottom = 61

[node name="HeaderBackOutline" type="Label" parent="Skew/Panel" index="0"]
show_behind_parent = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -146.5
margin_top = -23.5
margin_right = 146.5
margin_bottom = 25.5
grow_horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "Choose a character"
align = 1
valign = 1
script = ExtResource( 7 )
header_path = NodePath("../Header")

[node name="PanelDropShadow2" type="NinePatchRect" parent="Skew/Panel" index="1"]
modulate = Color( 0.282353, 0.658824, 0.909804, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -9.0
margin_top = -9.0
margin_right = 28.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 250, 135 )
texture = ExtResource( 5 )
patch_margin_left = 76
patch_margin_top = 132
patch_margin_right = 70
patch_margin_bottom = 64

[node name="PanelDropShadow" type="NinePatchRect" parent="Skew/Panel" index="2"]
modulate = Color( 0.160784, 0.2, 0.368627, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.0
margin_top = -5.0
margin_right = 22.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 250, 135 )
texture = ExtResource( 5 )
patch_margin_left = 76
patch_margin_top = 124
patch_margin_right = 70
patch_margin_bottom = 54

[node name="Header" type="Label" parent="Skew/Panel" index="3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -189.0
margin_top = -23.5
margin_right = 189.0
margin_bottom = 25.5
grow_horizontal = 2
custom_fonts/font = ExtResource( 3 )
text = "Choose a character"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="Skew/Panel/Header" index="0"]
show_behind_parent = true
margin_left = 10.0
margin_top = 23.0
margin_right = 126.0
margin_bottom = 37.0
color = Color( 0.160784, 0.2, 0.368627, 1 )

[node name="ColorRect2" type="ColorRect" parent="Skew/Panel/Header" index="1"]
show_behind_parent = true
margin_left = 197.0
margin_top = 23.0
margin_right = 370.0
margin_bottom = 37.0
color = Color( 0.160784, 0.2, 0.368627, 1 )

[node name="ColorRect3" type="ColorRect" parent="Skew/Panel/Header" index="2"]
show_behind_parent = true
margin_left = 10.0
margin_top = 11.0
margin_right = 22.0
margin_bottom = 30.0
color = Color( 0.160784, 0.2, 0.368627, 1 )

[node name="CharactersCenter" type="CenterContainer" parent="." index="3"]
margin_top = 120.0
margin_right = 768.0
margin_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CharactersCenter" index="0"]
margin_left = 84.0
margin_right = 684.0
margin_bottom = 120.0
grow_horizontal = 2
rect_min_size = Vector2( 600, 120 )
custom_styles/bg = SubResource( 1 )
follow_focus = true

[node name="Characters" type="HBoxContainer" parent="CharactersCenter/ScrollContainer" index="0"]
margin_right = 600.0
margin_bottom = 100.0
grow_horizontal = 2
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
custom_constants/separation = 16
alignment = 1

[node name="CharacterInfo" type="HBoxContainer" parent="." index="5"]
margin_left = 71.0
margin_top = 254.0
margin_right = 697.0
margin_bottom = 310.0

[node name="BioLabel" type="Label" parent="CharacterInfo" index="0"]
margin_right = 436.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color_shadow = Color( 0.0851834, 0.117517, 0.256552, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 8 )
autowrap = true

[node name="Space" type="Control" parent="CharacterInfo" index="1"]
margin_left = 440.0
margin_right = 456.0
margin_bottom = 56.0
rect_min_size = Vector2( 16, 0 )
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterInfo" index="2"]
margin_left = 460.0
margin_right = 578.0
margin_bottom = 56.0

[node name="WeaponLabel" type="Label" parent="CharacterInfo/VBoxContainer" index="0"]
margin_right = 118.0
margin_bottom = 18.0
rect_min_size = Vector2( 118, 0 )
size_flags_vertical = 5
custom_colors/font_color_shadow = Color( 0.0851834, 0.117517, 0.256552, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 10 )

[node name="WeaponLabel2" type="Label" parent="CharacterInfo/VBoxContainer" index="1"]
margin_top = 22.0
margin_right = 118.0
margin_bottom = 44.0
rect_min_size = Vector2( 118, 0 )
size_flags_vertical = 5
custom_colors/font_color_shadow = Color( 0.0851834, 0.117517, 0.256552, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 8 )

[node name="Space2" type="Control" parent="CharacterInfo" index="3"]
margin_left = 582.0
margin_right = 590.0
margin_bottom = 56.0
rect_min_size = Vector2( 8, 0 )
size_flags_vertical = 3

[node name="EquipmentIcon" type="TextureRect" parent="CharacterInfo" index="4"]
margin_left = 594.0
margin_right = 626.0
margin_bottom = 56.0
rect_min_size = Vector2( 32, 0 )
size_flags_vertical = 3
stretch_mode = 6

[node name="PassiveLabel" type="Label" parent="." index="6"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 71.0
margin_top = 310.0
margin_right = 697.0
margin_bottom = 335.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color_shadow = Color( 0.0851834, 0.117517, 0.256552, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 11 )
align = 1
valign = 1
